secret_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
  namespace: digital 
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
        - containerPort: 80
