clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: digital 
spec:
  selector:
    app: nginx         # Selects pods with the label app=nginx
  ports:
    - protocol: TCP
      port: 80         # Port the service will expose
      targetPort: 80   # Port the container is listening on
  clusterIP: None      # Default ClusterIP is automatically assigned (optional)
