nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: digital
spec:
  selector:
    app: nginx  # Selects pods with the label app=nginx
  ports:
    - protocol: TCP
      port: 80        # Port the service will expose
      targetPort: 80   # Port the container is listening on
      nodePort: 30080  # Port on each node's IP to expose externally
  type: NodePort      # Service type is NodePort (defined directly under spec)
